--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 	<head>
 		<title>Welcome</title>
 		<meta charset="utf-8">		
-	</head>	
+	</head>
+<style type="text/css">
+h1{
+	position: absolute;
+	top: 40%;
+	width: 100%;
+	font-family: Helvetica;
+	font-size: 100;
+	text-align: center;
+}
+</style>
+
 	<body>
 		<h1>Hi Lily</h1>
 	</body>	
